:tada: Update all project, v1.0

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,25 +2,18 @@ version: '3.7'
 services:
   postgresql:
     image: postgres:12.4-alpine
-    container_name: fastapi_db
+    container_name: quiero_trabajar_db
     restart: always
     volumes:
       - pgdata:/var/lib/postgresql/data
     ports:
-      - 15432:5432
+      - 5432:5432
     environment:
-      - POSTGRES_DB=fastapi
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=12345678
+      - POSTGRES_DB=quiero_trabajar
       - PGDATA=/var/lib/postgresql/data/pgdata
-    networks:
-      postgres_network:
-        aliases:
-          - postgres_host
 
 volumes:
   pgdata: {}
-networks:
-  postgres_network:
-    name: postgres_net
-    driver: bridge
+
