:tada: Update all structure files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,6 @@ requests = "^2.25.1"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.plugins."quiero_trabajar_demo.modules"]
+"users" = "quiero_trabajar_demo.views.users"
