--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ uvicorn = "^0.13.3"
 gunicorn = "^20.0.4"
 alembic = "^1.5.4"
 psycopg2-binary = "^2.8.6"
+bcrypt = "^3.2.0"
+Faker = "^6.3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
