--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ alembic = "^1.5.4"
 psycopg2-binary = "^2.8.6"
 bcrypt = "^3.2.0"
 Faker = "^6.3.0"
+python-multipart = "^0.0.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
